# snake-sfml

./: CMakeLists.txt  LICENSE  README.md
src/: main.cpp  map.cpp  map.hpp  snake.cpp  snake.hpp
